[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cryptopricebot"
version = "2.1.0"
description = "Real-time crypto price analysis CLI - Binance API, SMA/EMA/RSI/MACD indicators"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["cryptocurrency", "bitcoin", "technical-analysis", "binance", "cli"]
authors = [
    {name = "K2st0r", email = "k2st0r@users.noreply.github.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/K2st0r/crypto-bot"
Repository = "https://github.com/K2st0r/crypto-bot"
Donate = "https://github.com/K2st0r/crypto-bot#donate--打赏"

[project.scripts]
crypto-bot = "crypto_bot:main"
